Improve DecleX Cache Service.